# INDRA

./: .env.example  .gitignore  AGENTS.md  LICENSE  Procfile  README.md  index.html  manifest.webmanifest  pyproject.toml  railway.json  render.yaml  requirements-deploy.txt  requirements-dev.txt  requirements.txt  sw.js
.claude/agents/: compliance-agent.md  copilot-agent.md  demo-qa-agent.md  frontend-agent.md  ingestion-agent.md  knowledge-graph-agent.md  mobile-agent.md  platform-agent.md  proactive-intelligence-agent.md
.codex/agents/: compliance-agent.toml  copilot-agent.toml  demo-qa-agent.toml  frontend-agent.toml  ingestion-agent.toml  knowledge-graph-agent.toml  mobile-agent.toml  platform-agent.toml  proactive-intelligence-agent.toml
assets/: index-2WVOEiZP.css  index-esT6kNsG.js
data/demo/: Maintenance_Log_2022_2024.xlsx  manifest.json
docker/: Dockerfile  docker-compose.yml
docs/: DECISIONS.md  WIRING.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: backends.json  demo-snapshot.json  sw.js
frontend/src/: App.tsx  api.ts  backend.ts  graph.tsx  main.tsx  snapshot.ts  styles.css  types.ts  ui.tsx
indra/: __init__.py  main.py
indra/agents/: __init__.py
indra/api/: __init__.py  middleware.py
indra/core/: __init__.py  config.py  contracts.py  deps.py  events.py  exceptions.py  ids.py  logging.py  models.py
indra/llm/: anthropic_client.py  base.py  gemini.py  groq_client.py  local_embed.py  ollama.py  (+2 more)
scripts/: __init__.py  _console.py  build_demo_snapshot.py  demo_drawings.py  demo_facts.py  generate_demo_data.py  seed_demo_data.py
tests/: __init__.py  conftest.py  test_end_to_end.py
(+76 files in other folders)
